feat: 商城添加轮播图

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^2.6.5",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
+    "swiper": "^4.5.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vux": "^2.9.4",
