--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   "dependencies": {
     "axios": "^0.19.0",
     "less-loader": "^5.0.0",
+    "moment": "^2.24.0",
     "swiper": "^4.5.0",
     "vue": "^2.5.2",
+    "vue-qriously": "^1.1.1",
     "vue-router": "^3.0.1",
     "vue-scroller": "^2.2.4",
     "vux": "^2.9.4",
@@ -39,7 +41,6 @@
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
     "chalk": "^2.0.1",
-    "chromedriver": "^2.27.2",
     "copy-webpack-plugin": "^4.0.1",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
