--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "vue-router": "^3.0.1",
     "vue-scroller": "^2.2.4",
     "vux": "^2.9.4",
-    "vux-loader": "^1.2.9"
+    "vux-loader": "^1.2.9",
+    "weui": "^2.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
