--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "my-project",
+  "name": "JX-H5",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "xuan LI <lixuan@dongyin.net.cn>",
+  "author": "minMonster",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
