--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.19.0",
     "less-loader": "^5.0.0",
     "moment": "^2.24.0",
+    "svg": "^0.1.0",
     "swiper": "^4.5.0",
     "vue": "^2.5.2",
     "vue-qriously": "^1.1.1",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
+    "svg-sprite-loader": "3.6.0",
     "babel-eslint": "^8.2.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-jest": "^21.0.2",
